gitops/apps/radarr/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
        app.kubernetes.io/name: radarr
    spec:
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-root
              mountPath: /srv/media
            - name: media
              mountPath: /movies
              subPath: library/movies
            - name: media
              mountPath: /downloads
              subPath: downloads
      volumes:
        - name: media-root
          hostPath:
            path: /srv/media
            type: Directory
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media-pvc
